--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,14 +1,43 @@
 @import "compass";
 
+$font-color: #444444;
+$font-size: 16;
+$font-family: "Roboto", Helvetica, Arial;
+$heading-font-family: 'Josefin Slab', Trebuchet, Helvetica, Arial;
+
+$default-transition-function: ease-in;
+$default-transition-duration: 0.2s;
+
+$media-small-desktop: 960px;
+$media-tablet: 768px;
+$media-smartphone: 320px;
+
 @mixin font-size($pxsize){
 	font-size: #{$pxsize}px; 
 	font-size: #{$pxsize/10}rem;
 }
 
-$font-color: #444444;
-$font-size: 16;
-$font-family: "Roboto", Helvetica, Arial;
-$heading-font-family: 'Josefin Slab', Trebuchet, Helvetica, Arial;
+@mixin breakpoint($point){
+	$breakpoint-small-desktop: 1025px;
+	$breakpoint-tablet: $media-tablet;
+	$breakpoint-smartphone: $media-smartphone;
+	
+	@if $point == desktop{
+		@media 	only screen and (min-width: $media-small-desktop){
+			@content;
+		}
+	}
+	@if $point == tablet{
+		@media (min-width: $media-tablet) and (max-width: $media-small-desktop - 1px){
+			@content;
+		}
+	}
+	@if $point == mobile{
+		@media (max-width: $media-tablet - 1px){
+			@content;
+		}
+	}
+}
 
 //clearfix
 .clearfix:before,
@@ -71,23 +100,6 @@ input[type="radio"]{
 }
 input[type="checkbox"]{
 	vertical-align: middle;
-}
-/* These selection declarations have to be separate
-   No text-shadow: twitter.com/miketaylr/status/12228805301
-   Also: hot pink! */
-::-moz-selection {
-	background: #333333;
-	color: #fff;
-	text-shadow: none;
-}
-::selection {
-	background: #333333;
-	color: #fff;
-	text-shadow: none;
-}
-/* j.mp/webkit-tap-highlight-color */
-a:link {
-	-webkit-tap-highlight-color: #333333;
 }
 /* Make buttons play nice in IE:
    www.viget.com/inspire/styling-the-button-element-in-internet-explorer/ */
