--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,9 +1,16 @@
 @import "compass";
 
-$font-color: #444444;
+$font-color: #fff;
 $font-size: 16;
 $font-family: "Roboto", Helvetica, Arial;
 $heading-font-family: 'Josefin Slab', Trebuchet, Helvetica, Arial;
+
+$couleur-fond-corporate: #ded4cc;
+$couleur-texte-corporate: #3f5049;
+$couleur-fond-entrepreneur: #cb3521;
+$couleur-fond-transversalite: #2145cb;
+$couleur-fond-social: #ce2c9a;
+$couleur-fond-contraste: #252525;
 
 $default-transition-function: ease-in;
 $default-transition-duration: 0.2s;
